--- a/composer.json
+++ b/composer.json
@@ -3,20 +3,20 @@
     "type": "silverstripe-recipe",
     "description": "The SilverStripe Framework Installer",
     "require": {
-        "php": "^8.1",
-        "silverstripe/recipe-plugin": "~2.0.0@stable",
-        "silverstripe/vendor-plugin": "~2.0.1@stable",
-        "silverstripe/recipe-cms": "~5.1.0@stable",
-        "silverstripe-themes/simple": "~3.3.0@stable",
-        "silverstripe/login-forms": "~5.1.0@stable"
+        "php": "^7.4 || ^8.0",
+        "silverstripe/recipe-plugin": "^1.2",
+        "silverstripe/recipe-cms": "~4.13.0@stable",
+        "silverstripe-themes/simple": "~3.2.0",
+        "silverstripe/login-forms": "~4.9.0@stable"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.6"
+        "phpunit/phpunit": "^9.5"
     },
     "extra": {
+        "resources-dir": "_resources",
         "project-files-installed": [
-            ".htaccess",
             "app/.htaccess",
+            "app/_config.php",
             "app/_config/mimevalidator.yml",
             "app/_config/mysite.yml",
             "app/src/Page.php",
