--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
         "silverstripe/recipe-plugin": "^1.2",
         "silverstripe/recipe-cms": "~4.13.0@stable",
         "silverstripe-themes/simple": "~3.2.0",
-        "silverstripe/login-forms": "~4.9.0@stable"
+        "silverstripe/login-forms": "~4.9.0@stable",
+        "axllent/silverstripe-scss": "^1.8",
+        "buckleshusky/fontawesomeiconpicker": "3.0.*",
+        "nour-almasrieh/socialwall": "^0.5.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
