--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "silverstripe/login-forms": "~4.9.0@stable",
         "axllent/silverstripe-scss": "^1.8",
         "buckleshusky/fontawesomeiconpicker": "3.0.*",
-        "nour-almasrieh/socialwall": "^0.5.6"
+        "nour-almasrieh/socialwall": "^0.5.6",
+        "dnadesign/silverstripe-elemental": "^4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
