--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "axllent/silverstripe-scss": "^1.8",
         "buckleshusky/fontawesomeiconpicker": "3.0.*",
         "nour-almasrieh/socialwall": "^0.5.6",
-        "dnadesign/silverstripe-elemental": "^4"
+        "dnadesign/silverstripe-elemental": "^4",
+        "moritz-sauer-13/contentelement": "0.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
@@ -30,6 +31,13 @@
             ".htaccess",
             "index.php",
             "web.config"
+        ],
+        "expose": [
+            "themes/ss_miners/css",
+            "themes/ss_miners/scss",
+            "themes/ss_miners/javascript",
+            "themes/ss_miners/images",
+            "themes/ss_miners/webfonts"
         ]
     },
     "config": {
